add Huang Junye as speaker

--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -16,11 +16,11 @@
   topic: Topic
   description: More Info
 
-- title: Name
-  name: Name-3
-  subtitle: Position
-  img: TBD.jpg
-  thumbnail: TBD.jpg
-  alt: Picture of TBD
+- title: Huang Junye
+  name: Huang Junye
+  subtitle: Qiskit Advocate
+  img: HuangJunye.jpg
+  thumbnail: HuangJunye.jpg
+  alt: Picture of Huang Junye
   topic: Topic
   description: More Info
