remove 2017 in folders

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ markdown: kramdown
 facebook:
   app_id: 
 
-logo: "../css/2016_style/img/icon-large.png"
+logo: "../css/img/icon-large.png"
 
 social: 
   name: Your Facebook Page
@@ -17,7 +17,7 @@ social:
 
 google_site_verification: googleXXXXXXXXXXXXXXXX.html
 
-include: ['_2016_pages', '_2017_pages']
+include: ['_pages']
 
 plugins:
   - jekyll-sitemap
