--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://indiq-meetups.github.io
 
 # Site settings
 title: Awesome Title
