--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: https://indiq-meetups.github.io
 
 # Site settings
-title: Awesome Title
+title: IndiQ
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
@@ -62,3 +62,5 @@ address:
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+future: true
