--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: https://indiq-meetups.github.io
 # Site settings
 title: IndiQ
 email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Quantum computing community across India"
 
 
 # Team names, titles and social links
