--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,8 +1,8 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 3cb371
-  secondary: 6ecf99   
-  secondary-dark: 00283c
+  primary: 1192e8 # ibm cyan 50
+  secondary: 0072c3 # ibm cyan 60
+  secondary-dark: 00539a # ibm cyan 70
   muted: 777
 
 # Font Families
