--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ people:
       url: https://twitter.com/MadhavJivrajani
     - title: linkedin
       url: https://www.linkedin.com/in/madhav-jivrajani/
+    - title: github
+      url: https://github.com/MadhavJivrajani
 
 - name: Shadab Hussain
   pic: shadab
