serialize sponsor by putting sponsor variables in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,14 @@ people:
     - title: linkedin
       url: https://www.linkedin.com/in/rahul-pratap-singh-1a31a5138/
 
+
+# Sponsors
+sponsors:
+  - name: qiskit
+    url: https://qiskit.org/
+  - name: ibm
+    url: https://www.ibm.com/
+
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
