--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ people:
     - title: github
       url: https://github.com/starktech23
 
-- name: Rana Prathap
+- name: Rana prathap
   pic: rana
   city: Hyderabad
   social:
