add discord invite to page

--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,8 @@ sponsors:
 social:
   - title: twitter
     url: https://twitter.com/IndiQmeetups
+  - title: discord
+    url: https://discord.gg/Dn3rMu5
   - title: meetup
     url: https://www.meetup.com/IndiQ-Meetups/
   - title: youtube
